--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
                     <div class="person">
                         <img src="images/amrit.jpg" alt="Guramrit Thandi" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Guramrit Thandi</h3>
-                         ">President</p>
+                        <p class="position text-muted">President</p>
                       </div>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
