--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         </div>
     </header>
-    <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5" id="section-home">
+    <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_2.JPG);" data-aos="fade" data-stellar-background-ratio="0.5" id="section-home">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
                 <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
