--- a/team.html
+++ b/team.html
@@ -69,21 +69,21 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="person">
-                        <img src="images/amrit.JPG" alt="Guramrit Thandi" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                        <img src="images/amrit.jpg" alt="Guramrit Thandi" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Guramrit Thandi</h3>
                         <p class="position text-muted">President</p>
                       </div>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="person">
-                        <img src="images/dhairya.JPG" alt="Dhairya Bhatt" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                        <img src="images/dhairya.jpg" alt="Dhairya Bhatt" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Dhairya Bhatt</h3>
                         <p class="position text-muted">President</p>
                       </div>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="person">
-                        <img src="images/saaiyeeshan.JPG" alt="Saaiyeeshan Kirupaharan" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                        <img src="images/saaiyeeshan.jpg" alt="Saaiyeeshan Kirupaharan" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Saaiyeeshan Kirupaharan</h3>
                         <p class="position text-muted">Vice-President</p>
                       </div>
@@ -105,7 +105,7 @@
 
                 <div class="pt-5 col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="person">
-                        <img src="images/utkarsh.JPG" alt="Utkarsh Modgil" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                        <img src="images/utkarsh.jpg" alt="Utkarsh Modgil" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Utkarsh Modgil</h3>
                         <p class="position text-muted">Web & Tech Executive</p>
                       </div>
@@ -126,14 +126,14 @@
                 </div>
                 <div class="pt-5 col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="person">
-                        <img src="images/paneet.JPG" alt="Paneet Hans" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                        <img src="images/paneet.jpg" alt="Paneet Hans" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Paneet Hans</h3>
                         <p class="position text-muted">Marketing Coordinator</p>
                       </div>
                 </div>
                 <div class="pt-5 col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="person">
-                        <img src="images/victoria.JPG" alt="Victoria Nanan" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                        <img src="images/victoria.jpg" alt="Victoria Nanan" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Victoria Nanan</h3>
                         <p class="position text-muted">Outreach Coordinator</p>
                       </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="pt-5 col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="person">
-                        <img src="images/dilnazz.JPG" alt="Dilnazz Matharu" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                        <img src="images/dilnazz.jpg" alt="Dilnazz Matharu" class="img-fluid rounded mb-5 w-75 rounded-circle">
                         <h3>Dilnazz Matharu</h3>
                         <p class="position text-muted">Junior Representative</p>
                       </div>
